syntax = "proto3";
package protocol;

service Greeter {
	rpc Helloservice(HelloRequestMessage) returns (HelloResponseMessage) {}
}

message HelloRequestMessage {
	string name = 1;
}

message HelloResponseMessage {
	string msg = 1;
	int32 code=2;
	string data=3;
}