syntax = "proto3";
package protocol;

service c {
	rpc Helloservice(RequestMessage) returns (ResponseMessage) {}
}

message RequestMessage {
	string name = 1;
}

message ResponseMessage {
	string msg = 1;
}